--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Crayons = "4"
 Downloads = "1"
 ReferenceFrameRotations = "3"
-SatelliteToolboxBase = "0.2"
+SatelliteToolboxBase = "0.2, 0.3"
 SatelliteToolboxLegendre = "1.0.1"
 Scratch = "1"
 StaticArrays = "1"
