--- a/Project.toml
+++ b/Project.toml
@@ -17,12 +17,17 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 Crayons = "4"
+Dates = "1.6"
+DelimitedFiles = "1.6"
 Downloads = "1"
+LinearAlgebra = "1.6"
 ReferenceFrameRotations = "3"
 SatelliteToolboxBase = "0.2, 0.3"
 SatelliteToolboxLegendre = "1.0.1"
+SatelliteToolboxTransformations = "0.1"
 Scratch = "1"
 StaticArrays = "1"
+Test = "1.6"
 julia = "1.6"
 
 [extras]
