fix: .toml file

--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ DelimitedFiles = "1.6"
 DifferentiationInterface = "0.5"
 Downloads = "1"
 FiniteDiff = "2.24"
-ForwardDiff = ".10"
+ForwardDiff = "0.10"
 LinearAlgebra = "1.6"
 ReferenceFrameRotations = "3"
 SatelliteToolboxBase = "0.2, 0.3"
