--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 SatelliteToolboxBase = "9e17983a-0463-41a7-9a16-1682db6d8b66"
 SatelliteToolboxLegendre = "7fa26607-a272-47b2-9aa2-a6c1d419d9d2"
+SatelliteToolboxTransformations = "6b019ec1-7a1e-4f04-96c7-a9db1ca5514d"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
@@ -19,7 +20,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Crayons = "4"
 Dates = "1.6"
 DelimitedFiles = "1.6"
+DifferentiationInterface = "0.5"
 Downloads = "1"
+FiniteDiff = "2.24"
+ForwardDiff = "0.10"
 LinearAlgebra = "1.6"
 ReferenceFrameRotations = "3"
 SatelliteToolboxBase = "0.2, 0.3"
@@ -32,9 +36,12 @@ julia = "1.6"
 
 [extras]
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 SatelliteToolboxTransformations = "6b019ec1-7a1e-4f04-96c7-a9db1ca5514d"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "DelimitedFiles", "LinearAlgebra", "SatelliteToolboxTransformations"]
+test = ["Test", "DelimitedFiles", "DifferentiationInterface", "FiniteDiff", "ForwardDiff", "LinearAlgebra", "SatelliteToolboxTransformations"]
