--- a/Project.toml
+++ b/Project.toml
@@ -8,23 +8,35 @@ version = "0.1.6"
 [deps]
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+Diffractor = "9f5e2b26-1114-432f-b630-d3fe2085c51c"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
+Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Mooncake = "da2b9cff-9c12-43a0-ae48-6db2b0edb7d6"
+PolyesterForwardDiff = "98d1487c-24ca-40b6-b7ab-df2af84e126b"
 ReferenceFrameRotations = "74f56ac7-18b3-5285-802d-d4bd4f104033"
 SatelliteToolboxBase = "9e17983a-0463-41a7-9a16-1682db6d8b66"
 SatelliteToolboxLegendre = "7fa26607-a272-47b2-9aa2-a6c1d419d9d2"
 SatelliteToolboxTransformations = "6b019ec1-7a1e-4f04-96c7-a9db1ca5514d"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 Crayons = "4"
 Dates = "1.6"
 DelimitedFiles = "1.6"
-DifferentiationInterface = "0.5"
+DifferentiationInterface = "0.6"
+Diffractor = "0.2.6"
 Downloads = "1"
+Enzyme = "0.13.16"
 FiniteDiff = "2.24"
 ForwardDiff = "0.10"
 LinearAlgebra = "1.6"
+Mooncake = "0.4.50"
+PolyesterForwardDiff = "0.1.2"
 ReferenceFrameRotations = "3"
 SatelliteToolboxBase = "0.2, 0.3"
 SatelliteToolboxLegendre = "1.0.1"
@@ -32,6 +44,7 @@ SatelliteToolboxTransformations = "0.1"
 Scratch = "1"
 StaticArrays = "1"
 Test = "1.6"
+Zygote = "0.6.73"
 julia = "1.6"
 
 [extras]
