--- a/Project.toml
+++ b/Project.toml
@@ -23,28 +23,18 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 SatelliteToolboxGravityModelsZygoteExt = ["ForwardDiff", "Zygote"]
 
 [compat]
-AllocCheck = "0.2"
-Aqua = "0.8"
 Crayons = "4"
 Dates = "1.10"
-DelimitedFiles = "1.9"
-DifferentiationInterface = "0.6"
 Downloads = "1"
-Enzyme = "0.13"
-FiniteDiff = "2.26"
-ForwardDiff = "0.10"
-JET = "0.9"
+ForwardDiff = "1.0"
 LinearAlgebra = "1.10"
-Mooncake = "0.4"
-PolyesterForwardDiff = "0.1"
 ReferenceFrameRotations = "3"
 SatelliteToolboxBase = "1"
 SatelliteToolboxLegendre = "1.1"
 SatelliteToolboxTransformations = "1"
 Scratch = "1"
 StaticArrays = "1"
-Test = "1.10"
-Zygote = "0.6"
+Zygote = "0.6, 0.7"
 julia = "1.10, 1.11"
 
 [extras]
