--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ SatelliteToolboxLegendre = "1.1"
 Scratch = "1"
 StaticArrays = "1"
 Zygote = "0.6, 0.7"
-julia = "1.10, 1.11"
+julia = "1.10, 1.11, 1.12"
 
 [extras]
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
